change url,create careers,profile,branches pages,fix footer and header all over the site

--- a/branches.html
+++ b/branches.html
@@ -87,10 +87,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 white-color text-center">
-          <h1>About Us</h1>
+          <h1>Branches</h1>
           <ol class="breadcrumb white justify-content-center">
             <li><a href="index.html">Home</a></li>
-            <li class="active">About Us</li>
+            <li class="active">Branches</li>
           </ol>
         </div>
       </div>
@@ -98,104 +98,121 @@
   </section>
   <section class="section">
     <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-lg-5 m-15px-tb">
-          <div class="h3 m-15px-b">ProHost is a cloud hosting service provider Company. </div>
-          <p class="m-40px-b">ProHost is a cloud hosting service provider offering managed hosting solutions to
-            government agencies, companies and individuals offering web hosting, e-mail hosting,
-            hosting applications, e-commerce and games hosting over shared and dedicated cloud
-            servers. We have a fleet of secure servers and networks in Saudi Arabia, USA, Netherlands
-            and UAE, serving more than 65,000 customers from 29 countries. Our solutions are tailored
-            to the specific needs of each customer, ensuring that they are able to get the most out
-            of their hosting experience. We provide complete server management and monitoring
-            services, ensuring our customers that their hosting requirements are taken care of. We
-            offer a range of packages that include shared hosting, VPS hosting, dedicated hosting, and
-            colocation. Our team of highly skilled technicians are available 24 hours a day, 7 days a
-            week to provide assistance and troubleshooting. We also provide a wide range of add-on
-            services such as domain registration, software installation and setup, and more. </p>
-        </div>
-        <div class="col-lg-6 text-center m-15px-tb"> <img src="images/about-banner.svg" title="" alt=""> </div>
-      </div>
-    </div>
-  </section>
-<!--  <section>
-    <div class="container-fluid p-0px">
-      <div class="row no-gutters">
-        <div class="col-md-6 col-lg-3 bg-cover bg-no-repeat min-h-350px" style="background-image: url(images/about-1.jpg);"> </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="p-60px-tb p-40px-lr lg-p-40px-lr lg-p-20px-lr dark-bg">
-            <label class="white-color-light">Lorem ipsum dolor</label>
-            <h5 class="white-color m-15px-b">Lorem ipsum dolor sit amet, consectetur adipisicing</h5>
-            <p class="white-color-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="p-5px-t"> <a class="m-btn m-btn-radius m-btn-t-white m-btn-sm" href="#">Read More</a> </div>
+      <div class="row">
+        <div class="col-lg-3 col-sm-6 m-15px-tb">
+          <div class="card h-100 box-shadow-only-hover hover-top">
+            <div class="card-body text-center">
+              <div class="icon-50 theme-bg white-color border-radius-5 d-inline-block"> <i class="fas fa-map-signs"></i> </div>
+              <h5 class="m-20px-t font-w-700 dark-color">Address</h5>
+              <p class="m-0px">Jeddah - Hera Street - Al-Massa Center - Second Floor - Office 105</p>
+            </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-3 bg-cover bg-no-repeat min-h-350px" style="background-image: url(images/about-2.jpg);"> </div>
-        <div class="col-md-6 col-lg-3">
-          <div class="p-60px-tb p-40px-lr lg-p-40px-lr lg-p-20px-lr dark-bg">
-            <label class="white-color-light">Lorem ipsum dolor</label>
-            <h5 class="white-color m-15px-b font-w-600">Lorem ipsum dolor sit amet, consectetur adipisicing</h5>
-            <p class="white-color-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <div class="p-5px-t"> <a class="m-btn m-btn-radius m-btn-t-white m-btn-sm" href="#">Read More</a> </div>
+        <div class="col-lg-3 col-sm-6 m-15px-tb">
+          <div class="card h-100 box-shadow-only-hover hover-top">
+            <div class="card-body text-center">
+              <div class="icon-50 theme-bg white-color border-radius-5 d-inline-block"> <i class="fas fa-envelope"></i> </div>
+              <h5 class="m-20px-t font-w-700 dark-color">Email</h5>
+              <p class="m-0px">support@prohost.sa<br>
+                sales@prohost.sa</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 m-15px-tb">
+          <div class="card h-100 box-shadow-only-hover hover-top">
+            <div class="card-body text-center">
+              <div class="icon-50 theme-bg white-color border-radius-5 d-inline-block"> <i class="fas fa-phone-alt"></i> </div>
+              <h5 class="m-20px-t font-w-700 dark-color">Phone</h5>
+              <p class="m-0px">8002472030</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6 m-15px-tb">
+          <div class="card h-100 box-shadow-only-hover hover-top">
+            <div class="card-body text-center">
+              <div class="icon-50 theme-bg white-color border-radius-5 d-inline-block"> <i class="fas fa-mobile"></i> </div>
+              <h5 class="m-20px-t font-w-700 dark-color">Mobile</h5>
+              <p class="m-0px">+966550243031</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section> -->
-
-  <section class="section dark-bg">
-    <div class="container">
-      <div class="row md-m-25px-b m-45px-b justify-content-center text-center white-color">
+      <!-- -->
+      <div class="row md-m-25px-b justify-content-center text-center">
+        <div class="col-lg-8 py-2">
+          <h3 class="m-25px-b font-alt">International branches</h3>
+          <h5>Arab Republic of Egypt (for our customers in Egypt)</h5>
+          <p>Sales: +2021000754095</p>
+          <p>From 8:00 in the morning until 10:00 at night</p>
+        </div>
         <div class="col-lg-8">
-          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">CLIENT TESTIMONIALS</h6>
-          <h3 class="display-4 m-25px-b">Why go with ProHost?</h3>
-          <p class="m-0px font-2">Our experience and technical know-how are devoted to helping and directing our clients as they create or migrate their IT resources and infrastructure. With our focus on the client’s priorities and desired
-          outcome, we have the right solution, allowing them to concentrate on their primary mission; on Cloud
-          or Virtual Public Cloud (VPC), or Hybrid Cloud. As partners of the leading IT and infrastructure service
-          providers we only suggest the best solutions for our clients’ needs.</p>
+          <h5>Republic of Iraq (for our clients in Iraq)</h5>
+          <p>Sales: 07703777200</p>
+          <p>From 8:00 in the morning until 10:00 at night</p>
         </div>
       </div>
+      <!-- -->
     </div>
   </section>
-  <section class="section">
+  <section class="section gray-bg">
     <div class="container">
-      <div class="process-step">
-        <div class="row justify-content-between">
-          <div class="col-lg-5 align-self-center lg-m-40px-b">
-            <h6 class="theme-color m-20px-b theme-bg-alt p-15px-lr p-5px-tb d-inline-block border-radius-5 font-small">www.prohost.sa</h6>
-            <h3 class="h1 m-15px-b">ProHost <mark>Mission</mark></h3>
-            <p class="m-0px font-2">To offer our clients with the best possible
-              service while keeping costs low. We believe that
-              technology should be accessible to everyone, and
-              we work hard to make our products available at
-              an affordable price.</p>
-          </div>
-          <div class="col-lg-6">
-            <div class="card overflow-hidden border-radius-15"> <img src="images/our-mission.png" title="" alt=""> </div>
-          </div>
+      <div class="row md-m-25px-b justify-content-center text-center">
+        <div class="col-lg-8">
+          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Contact Us</h6>
+          <h3 class="display-4 m-25px-b font-alt">Tell us about yourself</h3>
         </div>
       </div>
-      <div class="process-step">
-        <div class="row justify-content-between flex-row-reverse">
-          <div class="col-lg-5 align-self-center lg-m-40px-b">
-            <h6 class="theme-color m-20px-b theme-bg-alt p-15px-lr p-5px-tb d-inline-block border-radius-5 font-small">Online Starter Bundle</h6>
-            <h3 class="h1 m-15px-b">ProHost <mark>Vission</mark></h3>
-            <p class="m-0px font-2">To provide a reliable hosting system
-            and applications to individuals as well as
-            organizations of the Kingdom at with lowest
-            prices and to be part of the Kingdom’s
-            efforts toward economic, social, and cultural
-            diversification</p>
-          </div>
-          <div class="col-lg-6">
-            <div class="card overflow-hidden border-radius-15"> <img src="images/our-mission.png" title="" alt=""> </div>
+      <div class="row justify-content-center">
+      <div class="col-md-11 col-lg-9">
+        <div class="card">
+          <div class="card-body">
+            <form name="contactform" method="post" action="mail.php">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="form-control-label">First Name</label>
+                    <input type="text"  name="first_name" class="form-control" placeholder="First Name">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Last Name</label>
+                    <input type="text"  name="last_name" class="form-control" placeholder="Last Name">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Email Address</label>
+                    <input type="email"  name="email" class="form-control" placeholder="Email Address">
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="form-control-label">Telephone Number</label>
+                    <input type="text"  name="telephone" class="form-control" placeholder="Telephone Number">
+                  </div>
+                </div>
+                <div class="col-md-12">
+                  <div class="form-group">
+                    <label class="form-control-label">Message</label>
+                    <textarea rows="6" name="comments" class="form-control" placeholder="Type Your Message"></textarea>
+                  </div>
+                </div>
+                <div class="col-md-12 text-center p-15px-t">
+                  <input class="m-btn m-btn-radius m-btn-theme" type="submit" value="Submit"> 
+                </div>
+                <div class="col-md-12 text-center p-15px-t"><small class="font-w-700">We'll get back to you in 1-2 business days.</small></div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
     </div>
+    </div>
   </section>
+  
+  
 </main>
-
 
 <!--starting footer-->
 <footer class="footer">
