--- a/dedicated-server.html
+++ b/dedicated-server.html
@@ -15,72 +15,72 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
-<header class="header-nav header-dark header-transparent">
-  <div class="fixed-header-bar"> 
-    <div class="container">
-      <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logoi.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-        <div class="collapse navbar-collapse navbar-collapse-overlay" id="navbar-main-collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                <li><a href="windows-shared-hosting.html">Saudi Arabia Windows Shared Hosting</a></li>
-                <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Domain</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="saudi-domain-registration.html">Saudi Domain Register</a></li>
-                <li><a href="domain-register.html">Domain Register</a></li>
-                <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
-                <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
-                <li><a href="colocation.html">Colocation</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
-                <li><a href="windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
-                <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
-                <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="ssl.html">SSL</a></li>
-                <li><a href="search-engine-optimisation.html">SEO</a></li>
-                <li><a href="cyber-security.html">Cyber Secuirty</a></li>
-                <li><a href="server-management.html">Server Management & Monitoring</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Email</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="Microsoft-Office-365.html">Microsoft Office 365
-                </a></li>
-                <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="exchange-email.html">Exchange Email</a></li>
-              </ul>
-            </li>
-          
-          </ul>
-          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
+  <header class="header-nav header-dark header-transparent">
+    <div class="fixed-header-bar"> 
+      <div class="container">
+        <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logoi.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+          <div class="collapse navbar-collapse navbar-collapse-overlay" id="navbar-main-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-arabia-shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
+                  <li><a href="saudi-arabia-windows-hosting.html">Saudi Arabia Windows Shared Hosting</a></li>
+                  <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
+                  <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
+  
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Domain</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-domain-register.html">Saudi Domain Register</a></li>
+                  <li><a href="domain-checker.html">Domain Checker</a></li>
+                  <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-arabia-dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
+                  <li><a href="dedicated-server.html"> Dedicated Servers</a></li>
+                  <li><a href="colocation.html">Colocation</a></li>
+  
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-arabia-linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
+                  <li><a href="saudi-arabia-windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
+                  <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
+                  <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
+  
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="ssl.html">SSL</a></li>
+                  <li><a href="seo.html">SEO</a></li>
+                  <li><a href="cyber-security.html">Cyber Secuirty</a></li>
+                  <li><a href="server-management.html">Server Management & Monitoring</a></li>
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Email</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="microsoft-office-365.html">Microsoft Office 365
+                  </a></li>
+                  <li><a href="google-workspace.html">Google Workspace</a></li>
+                  <li><a href="exchange-email.html">Exchange Email</a></li>
+                </ul>
+              </li>
+            
+            </ul>
+            <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
+        </div>
       </div>
     </div>
-  </div>
-</header>
-<!-- End Header --> 
+  </header>
+  <!-- End Header --> 
 <main>
   <section id="home" class="effect-section theme-bg">
     <div id="particles-box" class="particles-box"></div>
@@ -92,7 +92,7 @@
           <p class="lead white-color-light">Our Dedicated Servers are connected to our redundant premium TIER II network for better connectivity and low latency, Our Backup Power Generators provide each server 100% uptime if the datacenter faces a power problem.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/banner-img.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting14.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
@@ -168,7 +168,7 @@
                 <li><i class="fas fa-check"></i> BW 5 TBs (100Mbps)</li>
               </ul>
             </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-dedicated-servers/xeon-e3-1270v2">Buy Now</a> </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Buy Now</a> </div>
           </div>
         </div>
         <div class="col-lg-3 m-15px-tb">
@@ -448,7 +448,7 @@
             <div class="icon-80 theme-bg-alt theme-color d-inline-block m-20px-b border-radius-5"> <i class="fas fa-hdd"></i> </div>
             <h5 class="m-10px-b">Linux Cloud</h5>
             <p class="m-0px">Use more resources at your request with exceptional services</p>
-            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="linux-cloud.html">Learn More</a> </div>
+            <div class="p-25px-t"> <a class="m-btn m-btn-t-theme m-btn-sm m-btn-radius" href="saudi-arabia-linux-cloud.html">Learn More</a> </div>
           </div>
         </div>
       </div>
@@ -476,11 +476,11 @@
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-            <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="linux-cloud.html"> Linux Cloud </a></li>
-            <li><a href="windows-cloud.html">Windows Cloud</a></li>
+            <li><a href="saudi-arabia-shared-hosting.html">Shared Hosting</a></li>
+            <li><a href="saudi-arabia-linux-cloud.html"> Linux Cloud </a></li>
+            <li><a href="saudi-arabia-windows-cloud.html">Windows Cloud</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="exchange-email.html">Exchange Email</a></li>
+            <li><a href="email-hosting.html"> Email Hosting</a></li>
           </ul>
         </div>
         <!--
@@ -499,16 +499,16 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Branches</a></li>
-            <li><a href="#">Our Profile</a></li>
+            <li><a href="careers.html">Careers</a></li>
+            <li><a href="branches.html">Branches</a></li>
+            <li><a href="our-profile.html">Our Profile</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
               <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
-              <li><a href="domain-register.html">Doamin Register</a></li>
+              <li><a href="domain-checker.html">Doamin Checker</a></li>
               <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
