--- a/domain-transfer.html
+++ b/domain-transfer.html
@@ -15,72 +15,72 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
-<header class="header-nav header-dark header-transparent">
-  <div class="fixed-header-bar"> 
-    <div class="container">
-      <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logoi.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
-        <div class="collapse navbar-collapse navbar-collapse-overlay" id="navbar-main-collapse">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                <li><a href="windows-shared-hosting.html">Saudi Arabia Windows Shared Hosting</a></li>
-                <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Domain</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="saudi-domain-registration.html">Saudi Domain Register</a></li>
-                <li><a href="domain-register.html">Domain Register</a></li>
-                <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
-                <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
-                <li><a href="colocation.html">Colocation</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
-                <li><a href="windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
-                <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
-                <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="ssl.html">SSL</a></li>
-                <li><a href="search-engine-optimisation.html">SEO</a></li>
-                <li><a href="cyber-security.html">Cyber Secuirty</a></li>
-                <li><a href="server-management.html">Server Management & Monitoring</a></li>
-              </ul>
-            </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Email</a> <i class="fa fa-angle-down px-nav-toggle"></i>
-              <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="Microsoft-Office-365.html">Microsoft Office 365
-                </a></li>
-                <li><a href="Google-Workspace.html">Google Workspace</a></li>
-                <li><a href="exchange-email.html">Exchange Email</a></li>
-              </ul>
-            </li>
-          
-          </ul>
-          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
+  <header class="header-nav header-dark header-transparent">
+    <div class="fixed-header-bar"> 
+      <div class="container">
+        <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logoi.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+          <div class="collapse navbar-collapse navbar-collapse-overlay" id="navbar-main-collapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-arabia-shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
+                  <li><a href="saudi-arabia-windows-hosting.html">Saudi Arabia Windows Shared Hosting</a></li>
+                  <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
+                  <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
+  
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Domain</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-domain-register.html">Saudi Domain Register</a></li>
+                  <li><a href="domain-checker.html">Domain Checker</a></li>
+                  <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-arabia-dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
+                  <li><a href="dedicated-server.html"> Dedicated Servers</a></li>
+                  <li><a href="colocation.html">Colocation</a></li>
+  
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="saudi-arabia-linux-cloud.html">Saudi Arabia Linux Cloud</a></li>
+                  <li><a href="saudi-arabia-windows-cloud.html">Saudi Arabia Windows Cloud</a></li>
+                  <li><a href="cloud-linux-hosting.html">Offshore Cloud Linux Hosting</a></li>
+                  <li><a href="cloud-windows-hosting.html">Offshore Cloud Windows hosting</a></li>
+  
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="ssl.html">SSL</a></li>
+                  <li><a href="seo.html">SEO</a></li>
+                  <li><a href="cyber-security.html">Cyber Secuirty</a></li>
+                  <li><a href="server-management.html">Server Management & Monitoring</a></li>
+                </ul>
+              </li>
+              <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Email</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+                <ul class="px-dropdown-menu mm-dorp-in">
+                  <li><a href="microsoft-office-365.html">Microsoft Office 365
+                  </a></li>
+                  <li><a href="google-workspace.html">Google Workspace</a></li>
+                  <li><a href="exchange-email.html">Exchange Email</a></li>
+                </ul>
+              </li>
+            
+            </ul>
+            <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
+        </div>
       </div>
     </div>
-  </div>
-</header>
-<!-- End Header --> 
+  </header>
+  <!-- End Header --> 
 <main>
   <section id="home" class="theme-g-bg effect-section">
   <div class="shap-top-left opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
@@ -281,11 +281,11 @@
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-            <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="linux-cloud.html"> Linux Cloud </a></li>
-            <li><a href="windows-cloud.html">Windows Cloud</a></li>
+            <li><a href="saudi-arabia-shared-hosting.html">Shared Hosting</a></li>
+            <li><a href="saudi-arabia-linux-cloud.html"> Linux Cloud </a></li>
+            <li><a href="saudi-arabia-windows-cloud.html">Windows Cloud</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="exchange-email.html">Exchange Email</a></li>
+            <li><a href="email-hosting.html"> Email Hosting</a></li>
           </ul>
         </div>
         <!--
@@ -304,16 +304,16 @@
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="about-us.html">About Us</a></li>
             <li><a href="contact-us.html">Contact Us</a></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">Branches</a></li>
-            <li><a href="#">Our Profile</a></li>
+            <li><a href="careers.html">Careers</a></li>
+            <li><a href="branches.html">Branches</a></li>
+            <li><a href="our-profile.html">Our Profile</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
               <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
-              <li><a href="domain-register.html">Doamin Register</a></li>
+              <li><a href="domain-checker.html">Doamin Checker</a></li>
               <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
               <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
