--- a/saudi-arabia-shared-hosting.html
+++ b/saudi-arabia-shared-hosting.html
@@ -13,6 +13,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
   <header class="header-nav header-dark header-transparent">
     <div class="fixed-header-bar"> 
@@ -84,14 +85,14 @@
   <section id="home" class="effect-section theme-bg">
     <div id="particles-box" class="particles-box"></div>
     <div class="container">
-      <div class="row justify-content-between align-items-center  p-100px-t full-screen">
+      <div class="row justify-content-between align-items-center p-100px-t full-screen">
         <div class="col-lg-7 p-30px-tb">
-          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Porhost</span> offshore shared hosting</div>
-          <h2 class="display-4 white-color m-25px-b">Award Winning offshore Shared Web Hosting</h2>
-          <p class="lead white-color-light">Our goal is to provide you with the best web hosting services, around-the-clock support, and hosting plans that suit your budget.</p>
+          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">ProHost</span> Shared Hosting</div>
+          <h2 class="display-4 white-color m-25px-b">Trust your site to the world's #1 web host.</h2>
+          <p class="lead white-color-light">At ProHost, we understand the importance of page loading speed, security and fast customer support. So we are using high performance cutting-edge pure SSD web hosting package</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting2.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/banner_image-31.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
@@ -107,50 +108,23 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
-                <h4>Starter</h4>
+                <h4>Premium</h4>
                 <span></span> </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>249</h5>
+                <h5 class="theme-color"><span>SAR</span>1000</h5>
                 <label>Per Year</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
                 <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> 5G SSD Storage</li>
-                <li><i class="fas fa-check"></i> 50G Bandwidth</li>
-                <li><i class="fas fa-check"></i> 10 email accounts</li>
-                <li><i class="fas fa-check"></i> 5 databases</li>
+                <li><i class="fas fa-check"></i> 10 GB SSD Disk Space</li>
+                <li><i class="fas fa-check"></i> 10 GB Bandwidth</li>
+                <li><i class="fas fa-check"></i> Unlimited Email Account</li>
+                <li><i class="fas fa-check"></i> Free SSL Certificate</li>
               </ul>
             </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-starter">Buy Now</a> </div>
-          </div>
-        </div>
-        <div class="col-lg-3 m-15px-tb">
-          <div class="price-table-02 hover-top box-shadow-hover card">
-            <div class="pt-head d-flex align-items-center justify-content-between">
-              <div class="pth-left">
-                <h4>Basic</h4>
-                <span></span> </div>
-              <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>349</h5>
-                <label>Per Year</label>
-              </div>
-            </div>
-            <div class="pt-body">
-              <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> 10G SSD Storage</li>
-                <li><i class="fas fa-check"></i> 100G Bandwidth</li>
-                <li><i class="fas fa-check"></i> 15 email accounts</li>
-                <li><i class="fas fa-check"></i> 10 databases</li>
-              </ul>
-            </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-basic">Buy Now</a> </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-shared-hosting/basic">Buy Now</a> </div>
           </div>
         </div>
         <div class="col-lg-3 m-15px-tb">
@@ -160,22 +134,20 @@
                 <h4>Plus</h4>
                 <span></span> </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>449</h5>
+                <h5 class="theme-color"><span>SAR</span>1750</h5>
                 <label>Per Year</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> 15G SSD Storage</li>
-                <li><i class="fas fa-check"></i> 150G Bandwidth</li>
-                <li><i class="fas fa-check"></i> 10 email accounts</li>
-                <li><i class="fas fa-check"></i> 10 databases</li>
+                <li><i class="fas fa-check"></i> 3 Website</li>
+                <li><i class="fas fa-check"></i> 20 GB SSD Disk Space</li>
+                <li><i class="fas fa-check"></i> 20 GB Bandwidth</li>
+                <li><i class="fas fa-check"></i> Unlimited Email Account</li>
+                <li><i class="fas fa-check"></i> Free SSL Certificate</li>
               </ul>
             </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-plus">Buy Now</a> </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-shared-hosting/premimum">Buy Now</a> </div>
           </div>
         </div>
         <div class="col-lg-3 m-15px-tb">
@@ -185,28 +157,49 @@
                 <h4>Pro</h4>
                 <span></span> </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>600</h5>
+                <h5 class="theme-color"><span>SAR</span>2500</h5>
                 <label>Per Year</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> Unlimited SSD Storage</li>
-                <li><i class="fas fa-check"></i> Unlimited Bandwidth</li>
-                <li><i class="fas fa-check"></i> Unlimited email accounts</li>
-                <li><i class="fas fa-check"></i> Unlimited databases</li>
+                <li><i class="fas fa-check"></i> 5 Website</li>
+                <li><i class="fas fa-check"></i> 50 GB SSD Disk Space</li>
+                <li><i class="fas fa-check"></i> 50 GB Bandwidth</li>
+                <li><i class="fas fa-check"></i> Unlimited Email Account</li>
+                <li><i class="fas fa-check"></i> Free SSL Certificate</li>
               </ul>
             </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-plus">Buy Now</a> </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-shared-hosting/pro">Buy Now</a> </div>
+          </div>
+        </div>
+        <div class="col-lg-3 m-15px-tb">
+          <div class="price-table-02 hover-top box-shadow-hover card">
+            <div class="pt-head d-flex align-items-center justify-content-between">
+              <div class="pth-left">
+                <h4>Unlimited</h4>
+                <span></span> </div>
+              <div class="pth-right">
+                <h5 class="theme-color"><span>SAR</span>4500</h5>
+                <label>Per Year</label>
+              </div>
+            </div>
+            <div class="pt-body">
+              <ul class="list-type-01 theme">
+                <li><i class="fas fa-check"></i> Unlimited Website</li>
+                <li><i class="fas fa-check"></i> Unlimited SSD Disk Space</li>
+                <li><i class="fas fa-check"></i> Unlimited Bandwidth</li>
+                <li><i class="fas fa-check"></i> Unlimited Email Account</li>
+                <li><i class="fas fa-check"></i> Free SSL Certificate</li>
+              </ul>
+            </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-shared-hosting/unmetered">Buy Now</a> </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-<section class="section gray-bg">
+  <section class="section gray-bg">
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
@@ -448,7 +441,7 @@
       </div>
     </div>
   </section>
-  <section class="section g-bg-gray">
+<section class="section g-bg-gray">
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
