--- a/saudi-arabia-windows-hosting.html
+++ b/saudi-arabia-windows-hosting.html
@@ -13,6 +13,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
+
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
   <header class="header-nav header-dark header-transparent">
     <div class="fixed-header-bar"> 
@@ -86,12 +87,12 @@
     <div class="container">
       <div class="row justify-content-between align-items-center  p-100px-t full-screen">
         <div class="col-lg-7 p-30px-tb">
-          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Porhost</span> offshore shared hosting</div>
-          <h2 class="display-4 white-color m-25px-b">Award Winning offshore Shared Web Hosting</h2>
-          <p class="lead white-color-light">Our goal is to provide you with the best web hosting services, around-the-clock support, and hosting plans that suit your budget.</p>
+          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">ProHost</span> Windows Shared Hosting</div>
+          <h2 class="display-4 white-color m-25px-b">Windows Shared Hosting: An Affordable Solution</h2>
+          <p class="lead white-color-light">Windows Shared Hosting offers a cost-effective solution for individuals and small businesses, providing reliable performance, easy management, and the flexibility to scale as your needs grow.          </p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting2.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/banner-2.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
@@ -102,111 +103,103 @@
   </section>
   <section class="section" id="plan">
     <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-3 m-15px-tb">
-          <div class="price-table-02 hover-top box-shadow-hover card">
-            <div class="pt-head d-flex align-items-center justify-content-between">
-              <div class="pth-left">
-                <h4>Starter</h4>
-                <span></span> </div>
-              <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>249</h5>
-                <label>Per Year</label>
+        <div class="row align-items-center">
+            <div class="col-lg-3 m-15px-tb">
+              <div class="price-table-02 hover-top box-shadow-hover card">
+                <div class="pt-head d-flex align-items-center justify-content-between">
+                  <div class="pth-left">
+                    <h4>DS 1</h4>
+                    <span></span> </div>
+                  <div class="pth-right">
+                    <h5 class="theme-color"><span>SAR</span>900</h5>
+                    <label>Per Month</label>
+                  </div>
+                </div>
+                <div class="pt-body">
+                  <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> Xeon E3-1270v2</li>
+                    <li><i class="fas fa-check"></i> Mem 8GB DDR3 RAM</li>
+                    <li><i class="fas fa-check"></i> HDD 1TB SATA HDD</li>
+                    <li><i class="fas fa-check"></i> BW 5 TBs (100Mbps)</li>
+                  </ul>
+                </div>
+                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-dedicated-servers/xeon-e3-1270v2">Buy Now</a> </div>
               </div>
             </div>
-            <div class="pt-body">
-              <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> 5G SSD Storage</li>
-                <li><i class="fas fa-check"></i> 50G Bandwidth</li>
-                <li><i class="fas fa-check"></i> 10 email accounts</li>
-                <li><i class="fas fa-check"></i> 5 databases</li>
-              </ul>
-            </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-starter">Buy Now</a> </div>
-          </div>
-        </div>
-        <div class="col-lg-3 m-15px-tb">
-          <div class="price-table-02 hover-top box-shadow-hover card">
-            <div class="pt-head d-flex align-items-center justify-content-between">
-              <div class="pth-left">
-                <h4>Basic</h4>
-                <span></span> </div>
-              <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>349</h5>
-                <label>Per Year</label>
+            <div class="col-lg-3 m-15px-tb">
+              <div class="price-table-02 hover-top box-shadow-hover card">
+                <div class="pt-head d-flex align-items-center justify-content-between">
+                  <div class="pth-left">
+                    <h4>DS 2</h4>
+                    <span></span> </div>
+                  <div class="pth-right">
+                    <h5 class="theme-color"><span>SAR</span>1120</h5>
+                    <label>Per Month</label>
+                  </div>
+                </div>
+                <div class="pt-body">
+                  <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> Core i7 6700. 8CPUs</li>
+                    <li><i class="fas fa-check"></i> Mem 16GB DDR4 RAM</li>
+                    <li><i class="fas fa-check"></i> HDD 1TB SATA HDD</li>
+                    <li><i class="fas fa-check"></i> BW 5 TBs (100Mbps)</li>
+    
+                  </ul>
+                </div>
+                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-dedicated-servers/core-i7-6700">Buy Now</a> </div>
               </div>
             </div>
-            <div class="pt-body">
-              <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> 10G SSD Storage</li>
-                <li><i class="fas fa-check"></i> 100G Bandwidth</li>
-                <li><i class="fas fa-check"></i> 15 email accounts</li>
-                <li><i class="fas fa-check"></i> 10 databases</li>
-              </ul>
-            </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-basic">Buy Now</a> </div>
-          </div>
-        </div>
-        <div class="col-lg-3 m-15px-tb">
-          <div class="price-table-02 hover-top box-shadow-hover card">
-            <div class="pt-head d-flex align-items-center justify-content-between">
-              <div class="pth-left">
-                <h4>Plus</h4>
-                <span></span> </div>
-              <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>449</h5>
-                <label>Per Year</label>
+            <div class="col-lg-3 m-15px-tb">
+              <div class="price-table-02 hover-top box-shadow-hover card">
+                <div class="pt-head d-flex align-items-center justify-content-between">
+                  <div class="pth-left">
+                    <h4>DS 3</h4>
+                    <span></span> </div>
+                  <div class="pth-right">
+                    <h5 class="theme-color"><span>SAR</span>1650</h5>
+                    <label>Per Month</label>
+                  </div>
+                </div>
+                <div class="pt-body">
+                  <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> Dual Xeon E5-2430</li>
+                    <li><i class="fas fa-check"></i> Mem 24GB DDR3 RAM</li>
+                    <li><i class="fas fa-check"></i> HDD 1TB SATA HDD</li>
+                    <li><i class="fas fa-check"></i> BW 7 TBs (100Mbps)</li>
+    
+                  </ul>
+                </div>
+                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-dedicated-servers/dual-xeon-e5-2430">Buy Now</a> </div>
               </div>
             </div>
-            <div class="pt-body">
-              <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> 15G SSD Storage</li>
-                <li><i class="fas fa-check"></i> 150G Bandwidth</li>
-                <li><i class="fas fa-check"></i> 10 email accounts</li>
-                <li><i class="fas fa-check"></i> 10 databases</li>
-              </ul>
-            </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-plus">Buy Now</a> </div>
-          </div>
-        </div>
-        <div class="col-lg-3 m-15px-tb">
-          <div class="price-table-02 hover-top box-shadow-hover card">
-            <div class="pt-head d-flex align-items-center justify-content-between">
-              <div class="pth-left">
-                <h4>Pro</h4>
-                <span></span> </div>
-              <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>600</h5>
-                <label>Per Year</label>
+            <div class="col-lg-3 m-15px-tb">
+              <div class="price-table-02 hover-top box-shadow-hover card">
+                <div class="pt-head d-flex align-items-center justify-content-between">
+                  <div class="pth-left">
+                    <h4>DS 4</h4>
+                    <span></span> </div>
+                  <div class="pth-right">
+                    <h5 class="theme-color"><span>SAR</span>2200</h5>
+                    <label>Per Month</label>
+                  </div>
+                </div>
+                <div class="pt-body">
+                  <ul class="list-type-01 theme">
+                    <li><i class="fas fa-check"></i> CPU Dual Xeon E5-2620v3</li>
+                    <li><i class="fas fa-check"></i> Mem 32GB DDR4 RAM</li>
+                    <li><i class="fas fa-check"></i> 120GB Disk Space</li>
+                    <li><i class="fas fa-check"></i> HDD 1TB SATA HDD</li>
+                    <li><i class="fas fa-check"></i> Panel cPanel/WHM w/Softaculous</li>
+                    <li><i class="fas fa-check"></i> BW 10 TBs (100Mbps)</li>
+                  </ul>
+                </div>
+                <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-cloud-linux-hosting/chl-4">Buy Now</a> </div>
               </div>
             </div>
-            <div class="pt-body">
-              <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 1 Website</li>
-                <li><i class="fas fa-check"></i> Unlimited subdomains</li>
-                <li><i class="fas fa-check"></i> Unlimited Addon Domains</li>
-                <li><i class="fas fa-check"></i> Unlimited SSD Storage</li>
-                <li><i class="fas fa-check"></i> Unlimited Bandwidth</li>
-                <li><i class="fas fa-check"></i> Unlimited email accounts</li>
-                <li><i class="fas fa-check"></i> Unlimited databases</li>
-              </ul>
-            </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-linux-shared-hosting/shl-plus">Buy Now</a> </div>
           </div>
-        </div>
-      </div>
     </div>
   </section>
-<section class="section gray-bg">
+  <section class="section gray-bg">
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
@@ -448,7 +441,7 @@
       </div>
     </div>
   </section>
-  <section class="section g-bg-gray">
+<section class="section g-bg-gray">
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
         <div class="col-lg-8">
