change footer saudi domain register link

--- a/offshore-shared-hosting.html
+++ b/offshore-shared-hosting.html
@@ -536,7 +536,7 @@
         <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-              <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
+              <li><a href="saudi-domain-register.html">Saudi Doamin Register</a></li>
               <li><a href="domain-checker.html">Doamin Checker</a></li>
               <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
