--- a/cloud-linux-hosting.html
+++ b/cloud-linux-hosting.html
@@ -590,7 +590,7 @@ Our Managed Cloud plans include the user-friendly cPanel control panel that you 
         <div class="col-6 col-lg-3 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-              <li><a href="saudi-domain-registration.html">Saudi Doamin Register</a></li>
+              <li><a href="saudi-domain-register.html">Saudi Doamin Register</a></li>
               <li><a href="domain-checker.html">Doamin Checker</a></li>
               <li><a href="phttps://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               <li><a href="privacy-policy.html">Privacy Policy</a></li>
