change certificate in footer

--- a/domain-checker.html
+++ b/domain-checker.html
@@ -690,13 +690,13 @@
             <img class="pro-f-image" src="images/ISO-001-1-150x150.png" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/ISO 27001-Professional Hosting Company For Information Technology.jpg" alt="">
+            <img class="pro-f-image" src="images/ISO-005-1-150x150.png" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/BQSR-ISO 27018 -Professional Hosting Company For Information Technology.jpg" alt="">
+            <img class="pro-f-image" src="images/ISO-004-1-150x150.png" alt="">
           </div>
           <div class="col-2 col-lg-2 p-0">
-            <img class="pro-f-image" src="images/BQSR-ISO 27017  -Professional Hosting Company For Information Technology.jpg" alt="">
+            <img class="pro-f-image" src="images/ISO-003-1-150x150.png" alt="">
           </div>
         </div>
       </div>
